--- a/roster.html
+++ b/roster.html
@@ -272,7 +272,7 @@
 <tr><td> TB</td><td>Leonard Fournette      </td></tr>
 <tr><td> GB</td><td>AJ Dillon              </td></tr>
 <tr><td> NE</td><td>Rhamondre Stevenson    </td></tr>
-<tr><td>IND</td><td>Nyheim Hines           </td></tr>
+<tr><td> SF</td><td>Jeff Wilson            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
 <tr><td>LAR</td><td>Allen Robinson         </td></tr>
