--- a/week1.html
+++ b/week1.html
@@ -73,7 +73,7 @@
 <tr><td>GDavis</td>        <td></td><td align=right>140</td></tr>
 <tr><td>Schultz</td>       <td></td><td align=right>30</td></tr>
 <tr><td>Gay</td>           <td></td><td align=right>65</td></tr>
-<tr><td>Pierce</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DPierce</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>565</td></tr>
 </table>
 </td>
