--- a/week2.html
+++ b/week2.html
@@ -9,7 +9,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
 <tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
 <tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
@@ -23,12 +23,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
 <tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Penny</td>         <td></td><td align=right>0</td></tr>
+<tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>GDavis</td>        <td></td><td align=right>0</td></tr>
+<tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Pierce</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DPierce</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -87,7 +87,7 @@
 <tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>WRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -97,7 +97,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (6)</b></font></td></tr>
 <tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Patterson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
@@ -113,7 +113,7 @@
 <tr><td>NHarris</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Cooks</td>         <td></td><td align=right>0</td></tr>
+<tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
