--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <td bgcolor=#F2F2ED>
 <b>Week</b>
 <a href="week1.html"><b>1</b></a>
-<a href="week2.html"><b>2P</b></a><br>
+<a href="week2.html"><b>2</b></a>
+<a href="week3.html"><b>3P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -59,44 +60,44 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>Mike(3)</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>565</font></td>
-    <td><font size=2>405</font></td>
-    <td><font size=2>565</font></td>
-    <td><font size=2>565</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>435</font></td>
-    <td><font size=2>380</font></td>
-    <td><font size=2>435</font></td>
+    <td><font size=2>1030</font></td>
+    <td><font size=2>970</font></td>
+    <td><font size=2>595</font></td>
     <td><font size=2>435</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(9)</font></td>
-    <td><font size=2>0</font></td>
     <td><font size=2>1</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1400</font></td>
+    <td><font size=2>1090</font></td>
+    <td><font size=2>995</font></td>
     <td><font size=2>405</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Mike(3)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1155</font></td>
+    <td><font size=2>1000</font></td>
+    <td><font size=2>590</font></td>
     <td><font size=2>565</font></td>
-    <td><font size=2>405</font></td>
-    <td><font size=2>405</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Matthew(7)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>380</font></td>
-    <td><font size=2>435</font></td>
-    <td><font size=2>380</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>880</font></td>
+    <td><font size=2>1190</font></td>
+    <td><font size=2>500</font></td>
     <td><font size=2>380</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>260</font></td>
-    <td><font size=2>715</font></td>
-    <td><font size=2>260</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>700</font></td>
+    <td><font size=2>1350</font></td>
+    <td><font size=2>440</font></td>
     <td><font size=2>260</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
@@ -108,44 +109,44 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Sam(4)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>1555</font></td>
+    <td><font size=2>1040</font></td>
     <td><font size=2>800</font></td>
-    <td><font size=2>540</font></td>
-    <td><font size=2>800</font></td>
-    <td><font size=2>800</font></td>
+    <td><font size=2>755</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>States(2)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>1430</font></td>
+    <td><font size=2>1065</font></td>
     <td><font size=2>795</font></td>
-    <td><font size=2>625</font></td>
-    <td><font size=2>795</font></td>
-    <td><font size=2>795</font></td>
-    <td><font size=2>0</font></td>
-<tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>715</font></td>
-    <td><font size=2>260</font></td>
-    <td><font size=2>715</font></td>
-    <td><font size=2>715</font></td>
+    <td><font size=2>635</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>0</font></td>
     <td><font size=2>1</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1800</font></td>
+    <td><font size=2>1195</font></td>
+    <td><font size=2>1175</font></td>
     <td><font size=2>625</font></td>
-    <td><font size=2>795</font></td>
-    <td><font size=2>625</font></td>
-    <td><font size=2>625</font></td>
+    <td><font size=2>1</font></td>
+<tr><td><font size=2>Rich(6)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1240</font></td>
+    <td><font size=2>1255</font></td>
+    <td><font size=2>715</font></td>
+    <td><font size=2>525</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>John(10)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>940</font></td>
+    <td><font size=2>1975</font></td>
     <td><font size=2>540</font></td>
-    <td><font size=2>800</font></td>
-    <td><font size=2>540</font></td>
-    <td><font size=2>540</font></td>
+    <td><font size=2>400</font></td>
     <td><font size=2>0</font></td>
 </table>
 </table>
