--- a/thousand.html
+++ b/thousand.html
@@ -279,6 +279,12 @@
     <td>1180</td>
     <td>Mike</td>
     <td>575</td></tr>
+<tr><td>2022</td>
+    <td>Week 2</td>
+    <td>Randy Edwards</td>
+    <td>1175</td>
+    <td>John</td>
+    <td>400</td></tr>
 <tr><td>2011</td>
     <td>Week 3</td>
     <td>Grant Mydland</td>
