--- a/freeagt.html
+++ b/freeagt.html
@@ -5,82 +5,94 @@
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 305</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 230</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Davis Mills            </td><td><font size=3> 160</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Justin Fields          </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Geno Smith             </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Tua Tagovailoa         </td><td><font size=3> 140</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 130</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Jared Goff             </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 110</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Joe Flacco             </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Mac Jones              </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Tua Tagovailoa         </td><td><font size=3> 605</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 515</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Jared Goff             </td><td><font size=3> 360</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 350</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Mac Jones              </td><td><font size=3> 210</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Justin Fields          </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Davis Mills            </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Geno Smith             </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Cooper Rush            </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3>  80</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
 <tr><td><font size=3>Dontrell Hilliard      </td><td><font size=3> 205</td></tr>
 <tr><td><font size=3>Brandon Bolden         </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Reggie Gilliam         </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Jerick McKinnon        </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Darrel Williams        </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Chris Myarick          </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Boston Scott           </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>JD McKissic            </td><td><font size=3>   5</td></tr>
+<tr><td><font size=3>JD McKissic            </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>Nyheim Hines           </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Devin Duvernay         </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Devin Duvernay         </td><td><font size=3> 400</td></tr>
+<tr><td><font size=3>Corey Davis            </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Robbie Anderson        </td><td><font size=3> 175</td></tr>
 <tr><td><font size=3>Sterling Shepard       </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>DeAndre Carter         </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Quez Watkins           </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Noah Brown             </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Dante Pettis           </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>DeAndre Carter         </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>Justin Watson          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>DJ Chark               </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Greg Dortch            </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>Breshad Perriman       </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Isaiah McKenzie        </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Ty Montgomery          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Curtis Samuel          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Equanimeous St Brown   </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Jarvis Landry          </td><td><font size=3>  55</td></tr>
-<tr><td><font size=3>Tyler Boyd             </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Mecole Hardman         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Corey Davis            </td><td><font size=3>  35</td></tr>
-<tr><td><font size=3>Noah Brown             </td><td><font size=3>  30</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
 <tr><td><font size=3>1)</td><td><font size=3>OJ Howard              </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Will Dissly            </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Colby Parkinson        </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Tyler Conklin          </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Jody Fortson           </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Andrew Beck            </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Ian Thomas             </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 135</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Will Dissly            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Ross Dwelley           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Colby Parkinson        </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Eric Saubert           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Tyler Conklin          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Jody Fortson           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Irv Smith              </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Andrew Beck            </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Ian Thomas             </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Younghoe Koo           </td><td><font size=3> 195</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 135</td></tr>
-<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 110</td></tr>
-<tr><td><font size=3>Wil Lutz               </td><td><font size=3> 110</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Brett Maher            </td><td><font size=3>  60</td></tr>
-<tr><td><font size=3>Jason Myers            </td><td><font size=3>  55</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3>  45</td></tr>
-<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3>  45</td></tr>
-<tr><td><font size=3>Robbie Gould           </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>Austin Seibert         </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3>  10</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 210</td></tr>
+<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Brett Maher            </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>Wil Lutz               </td><td><font size=3> 145</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 140</td></tr>
+<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Austin Seibert         </td><td><font size=3> 120</td></tr>
+<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 115</td></tr>
+<tr><td><font size=3>Robbie Gould           </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>Mason Crosby           </td><td><font size=3>  85</td></tr>
+<tr><td><font size=3>Randy Bullock          </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>Rodrigo Blankenship    </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Matt Ammendola         </td><td><font size=3>  65</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
-<tr><td><font size=3>Zander Horvath         </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Zander Horvath         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Jameson Williams       </td><td><font size=3>   0</td></tr>
 </table>
 </td></tr></table>
