--- a/pickups.html
+++ b/pickups.html
@@ -134,8 +134,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Tua Tagovailoa/Nico Collins</td>
+<td width=50>9/20</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
