--- a/roster.html
+++ b/roster.html
@@ -123,6 +123,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (5)</b></font></td></tr>
 <tr><td>LAR</td><td>Matthew Stafford       </td></tr>
 <tr><td>DAL</td><td>Dak Prescott           </td></tr>
+<tr><td>MIA</td><td>Tua Tagovailoa         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
 <tr><td>ARI</td><td>James Conner           </td></tr>
@@ -133,7 +134,6 @@
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
 <tr><td>CHI</td><td>Darnell Mooney         </td></tr>
-<tr><td>HOU</td><td>Nico Collins           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Kyle Pitts             </td></tr>
 <tr><td height=9></td><td></td></tr>
