--- a/roster.html
+++ b/roster.html
@@ -79,12 +79,12 @@
 <tr><td>JAX</td><td>Christian Kirk         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Dalton Schultz         </td></tr>
+<tr><td>LAC</td><td>Gerald Everett         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Matt Gay               </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Dameon Pierce          </td></tr>
 <tr><td>ATL</td><td>Tyler Allgeier         </td></tr>
-<tr><td>NYG</td><td>Daniel Bellinger       </td></tr>
 <tr><td>PIT</td><td>Jaylen Warren          </td></tr>
 </table>
 </td>
