--- a/week3.html
+++ b/week3.html
@@ -11,9 +11,9 @@
 <tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
-<tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
+<tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -23,7 +23,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>ASt Brown</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
@@ -37,8 +37,8 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (2)</b></font></td></tr>
 <tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
+<tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
 <tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
@@ -69,9 +69,9 @@
 <tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
+<tr><td>GDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Everett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
 <tr><td>DPierce</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -100,7 +100,7 @@
 <tr><td>Patterson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Okwuegbunam</td>   <td></td><td align=right>0</td></tr>
 <tr><td>Prater</td>        <td></td><td align=right>0</td></tr>
 <tr><td>SMoore</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -125,7 +125,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (7)</b></font></td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
@@ -144,7 +144,7 @@
 <tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
 <tr><td>ARobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Gano</td>          <td></td><td align=right>0</td></tr>
 <tr><td>York</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
