--- a/pickups.html
+++ b/pickups.html
@@ -329,5 +329,6 @@
 Free Pickups:<br>
 Team 2  - Younghoe Koo/Rodrigo Blankenship (9/13)<br>
 Team 4  - Jordan Mason/Jameson Williams (9/13)
+Team 4  - David Njoku/Trey Lance (9/27)
 </td></tr>
 </table>
