--- a/roster.html
+++ b/roster.html
@@ -94,7 +94,6 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Sam (4)</b></font></td></tr>
 <tr><td>ARI</td><td>Kyler Murray           </td></tr>
-<tr><td> SF</td><td>Trey Lance             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Christian McCaffrey    </td></tr>
 <tr><td>CHI</td><td>David Montgomery       </td></tr>
@@ -110,6 +109,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td> NE</td><td>Hunter Henry           </td></tr>
+<tr><td>CLE</td><td>David Njoku            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
 <tr><td height=9></td><td></td></tr>
