--- a/pickups.html
+++ b/pickups.html
@@ -327,8 +327,8 @@
 <tr><td width=50>9/13</td>
 <td width=600>
 Free Pickups:<br>
-Team 2  - Younghoe Koo/Rodrigo Blankenship (9/13)<br>
-Team 4  - Jordan Mason/Jameson Williams (9/13)
-Team 4  - David Njoku/Trey Lance (9/27)
+States - Younghoe Koo/Rodrigo Blankenship (9/13)<br>
+Sam - Jordan Mason/Jameson Williams (9/13)<br>
+Sam - David Njoku/Trey Lance (9/27)
 </td></tr>
 </table>
