--- a/pickups.html
+++ b/pickups.html
@@ -331,4 +331,9 @@ States - Younghoe Koo/Rodrigo Blankenship (9/13)<br>
 Sam - Jordan Mason/Jameson Williams (9/13)<br>
 Sam - David Njoku/Trey Lance (9/27)
 </td></tr>
+<tr><td width=50>9/30</td>
+<td width=600>
+Sam - Najee Harris, Chris Olave, Cole Kmet<br>
+Steven - David Montgomery, Khalil Herbert, Jahan Dotson
+</td></tr>
 </table>
