--- a/thousand.html
+++ b/thousand.html
@@ -39,6 +39,12 @@
     <td>1480</td>
     <td>Mike</td>
     <td>165</td></tr>
+<tr><td>2022</td>
+    <td>Week 4</td>
+    <td>Mike Wieczorek</td>
+    <td>1450</td>
+    <td>John</td>
+    <td>525</td></tr>
 <tr><td>2011</td>
     <td>Week 5</td>
     <td>Rich Fleck</td>
