--- a/roster.html
+++ b/roster.html
@@ -192,7 +192,6 @@
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
 <tr><td> SF</td><td>Brandon Aiyuk          </td></tr>
-<tr><td>PIT</td><td>Chase Claypool         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
 <tr><td>LAR</td><td>Tyler Higbee           </td></tr>
@@ -202,6 +201,7 @@
 <tr><td>SEA</td><td>Ken Walker             </td></tr>
 <tr><td>ATL</td><td>Desmond Ridder         </td></tr>
 <tr><td>NYG</td><td>Wan'Dale Robinson      </td></tr>
+<tr><td> NE</td><td>Bailey Zappe           </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -267,6 +267,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>John (10)</b></font></td></tr>
 <tr><td> TB</td><td>Tom Brady              </td></tr>
 <tr><td> LV</td><td>Derek Carr             </td></tr>
+<tr><td>DET</td><td>Jared Goff             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td> TB</td><td>Leonard Fournette      </td></tr>
@@ -287,7 +288,6 @@
 <tr><td>CLE</td><td>Cade York              </td></tr>
 <tr><td> TB</td><td>Rachaad White          </td></tr>
 <tr><td> GB</td><td>Romeo Doubs            </td></tr>
-<tr><td>TEN</td><td>Kyle Philips           </td></tr>
 </table>
 </td>
 <td>
