--- a/pickups.html
+++ b/pickups.html
@@ -198,8 +198,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Bailey Zappe/Chase Claypool</td>
+<td width=50>10/4</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -279,8 +279,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jared Goff/Kyle Philips</td>
+<td width=50>10/4</td>
 </tr></table></td>
 </tr>
 <tr>
