--- a/pickups.html
+++ b/pickups.html
@@ -329,7 +329,8 @@
 Free Pickups:<br>
 States - Younghoe Koo/Rodrigo Blankenship (9/13)<br>
 Sam - Jordan Mason/Jameson Williams (9/13)<br>
-Sam - David Njoku/Trey Lance (9/27)
+Sam - David Njoku/Trey Lance (9/27)<br>
+Rich - Caleb Huntley/Javonte Williams (10/6)
 </td></tr>
 <tr><td width=50>9/30</td>
 <td width=600>
