--- a/roster.html
+++ b/roster.html
@@ -152,10 +152,10 @@
 <tr><td>BUF</td><td>Josh Allen             </td></tr>
 <tr><td>TEN</td><td>Ryan Tannehill         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>DEN</td><td>Javonte Williams       </td></tr>
 <tr><td>JAX</td><td>Travis Etienne         </td></tr>
 <tr><td> LV</td><td>Josh Jacobs            </td></tr>
 <tr><td>ATL</td><td>Cordarrelle Patterson  </td></tr>
+<tr><td>ATL</td><td>Caleb Huntley          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Cooper Kupp            </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
