--- a/thousand.html
+++ b/thousand.html
@@ -1113,6 +1113,12 @@
     <td>1005</td>
     <td>States</td>
     <td>695</td></tr>
+<tr><td>2022</td>
+    <td>Week 5</td>
+    <td>Sam Edwards</td>
+    <td>1005</td>
+    <td>Rich</td>
+    <td>825</td></tr>
 <tr><td>2002</td>
     <td>Week 13</td>
     <td>States Edwards</td>
