--- a/freeagt.html
+++ b/freeagt.html
@@ -1,63 +1,63 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2022 Free Agent Leaderboard<br>(Through week 4)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2022 Free Agent Leaderboard<br>(Through week 5)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Jared Goff             </td><td><font size=3> 655</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 590</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Geno Smith             </td><td><font size=3> 535</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 495</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 430</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Davis Mills            </td><td><font size=3> 355</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Geno Smith             </td><td><font size=3> 850</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 825</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 520</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 455</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 415</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 405</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 395</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 395</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Davis Mills            </td><td><font size=3> 355</td></tr>
 <tr><td><font size=3>10)</td><td><font size=3>Mac Jones              </td><td><font size=3> 315</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 305</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Justin Fields          </td><td><font size=3> 300</td></tr>
 <tr><td><font size=3>12)</td><td><font size=3>Cooper Rush            </td><td><font size=3> 285</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Justin Fields          </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 185</td></tr>
 <tr><td><font size=3>14)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 155</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 110</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Dontrell Hilliard      </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>Dontrell Hilliard      </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>Tevin Coleman          </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Eno Benjamin           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Jerick McKinnon        </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Avery Williams         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Javonte Williams       </td><td><font size=3>  90</td></tr>
 <tr><td><font size=3>Brandon Bolden         </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Rex Burkhead           </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Reggie Gilliam         </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Caleb Huntley          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Jerick McKinnon        </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Latavius Murray        </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Darrel Williams        </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Gary Brightwell        </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Justin Jackson         </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Chris Myarick          </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Boston Scott           </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Justice Hill           </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>JD McKissic            </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Nyheim Hines           </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Joshua Kelley          </td><td><font size=3>  50</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Devin Duvernay         </td><td><font size=3> 475</td></tr>
+<tr><td><font size=3>Devin Duvernay         </td><td><font size=3> 500</td></tr>
+<tr><td><font size=3>Tyler Lockett          </td><td><font size=3> 405</td></tr>
 <tr><td><font size=3>Corey Davis            </td><td><font size=3> 285</td></tr>
+<tr><td><font size=3>Dyami Brown            </td><td><font size=3> 275</td></tr>
 <tr><td><font size=3>Isaiah McKenzie        </td><td><font size=3> 235</td></tr>
 <tr><td><font size=3>Tyler Boyd             </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>Josh Reynolds          </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>Jakobi Meyers          </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 215</td></tr>
 <tr><td><font size=3>Noah Brown             </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>Josh Reynolds          </td><td><font size=3> 185</td></tr>
-<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 185</td></tr>
 <tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Mack Hollins           </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Robbie Anderson        </td><td><font size=3> 175</td></tr>
 <tr><td><font size=3>DeVante Parker         </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>Laviska Shenault       </td><td><font size=3> 170</td></tr>
-<tr><td><font size=3>Sterling Shepard       </td><td><font size=3> 160</td></tr>
-<tr><td><font size=3>DeAndre Carter         </td><td><font size=3> 155</td></tr>
-<tr><td><font size=3>Quez Watkins           </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Olamide Zaccheaus      </td><td><font size=3> 175</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
@@ -65,46 +65,47 @@
 <tr><td><font size=3>1)</td><td><font size=3>Will Dissly            </td><td><font size=3> 250</td></tr>
 <tr><td><font size=3>2)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 190</td></tr>
 <tr><td><font size=3>3)</td><td><font size=3>OJ Howard              </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Jody Fortson           </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 115</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Ross Dwelley           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Colby Parkinson        </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Eric Saubert           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Robert Tonyan          </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Jordan Akins           </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Noah Fant              </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Noah Gray              </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Hayden Hurst           </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Josh Oliver            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Hayden Hurst           </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Jody Fortson           </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 115</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Ross Dwelley           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Colby Parkinson        </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Eric Saubert           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Robert Tonyan          </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Adam Trautman          </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Jordan Akins           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Noah Fant              </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Noah Gray              </td><td><font size=3>  50</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Brett Maher            </td><td><font size=3> 435</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 380</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 330</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 330</td></tr>
-<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 290</td></tr>
-<tr><td><font size=3>Jason Myers            </td><td><font size=3> 260</td></tr>
-<tr><td><font size=3>Wil Lutz               </td><td><font size=3> 240</td></tr>
-<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 230</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Robbie Gould           </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>Austin Seibert         </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>Brett Maher            </td><td><font size=3> 545</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 455</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 435</td></tr>
+<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3> 435</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 415</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 370</td></tr>
+<tr><td><font size=3>Jason Myers            </td><td><font size=3> 360</td></tr>
+<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 355</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 345</td></tr>
+<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 340</td></tr>
+<tr><td><font size=3>Wil Lutz               </td><td><font size=3> 320</td></tr>
+<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 285</td></tr>
+<tr><td><font size=3>Mason Crosby           </td><td><font size=3> 270</td></tr>
+<tr><td><font size=3>Robbie Gould           </td><td><font size=3> 255</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
+<tr><td><font size=3>Daniel Bellinger       </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Jelani Woods           </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Zander Horvath         </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Daniel Bellinger       </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Velus Jones            </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Chigoziem Okonkwo      </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Bailey Zappe           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Kyle Philips           </td><td><font size=3>  30</td></tr>
 <tr><td><font size=3>Jameson Williams       </td><td><font size=3>   0</td></tr>
 </table>
 </td></tr></table>
