--- a/roster.html
+++ b/roster.html
@@ -37,6 +37,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (2)</b></font></td></tr>
 <tr><td>DEN</td><td>Russell Wilson         </td></tr>
 <tr><td>CLE</td><td>Deshaun Watson         </td></tr>
+<tr><td>SEA</td><td>Geno Smith             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Saquon Barkley         </td></tr>
 <tr><td>PHI</td><td>Miles Sanders          </td></tr>
@@ -57,7 +58,6 @@
 <tr><td> LV</td><td>Zamir White            </td></tr>
 <tr><td>TEN</td><td>Hassan Haskins         </td></tr>
 <tr><td>WAS</td><td>Sam Howell             </td></tr>
-<tr><td>LAR</td><td>Kyren Williams         </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -80,12 +80,12 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Dalton Schultz         </td></tr>
 <tr><td>LAC</td><td>Gerald Everett         </td></tr>
+<tr><td>CLE</td><td>David Njoku            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Matt Gay               </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Dameon Pierce          </td></tr>
 <tr><td>ATL</td><td>Tyler Allgeier         </td></tr>
-<tr><td>PIT</td><td>Jaylen Warren          </td></tr>
 </table>
 </td>
 </tr>
@@ -108,7 +108,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td> NE</td><td>Hunter Henry           </td></tr>
-<tr><td>CLE</td><td>David Njoku            </td></tr>
 <tr><td>CHI</td><td>Cole Kmet              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
@@ -116,6 +115,7 @@
 <tr><td>PIT</td><td>Kenny Pickett          </td></tr>
 <tr><td> SF</td><td>Jordan Mason           </td></tr>
 <tr><td> NO</td><td>Chris Olave            </td></tr>
+<tr><td>PIT</td><td>Jaylen Warren          </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -134,12 +134,12 @@
 <tr><td>CIN</td><td>Tee Higgins            </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
 <tr><td>CHI</td><td>Darnell Mooney         </td></tr>
+<tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Kyle Pitts             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Daniel Carlson         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>TEN</td><td>Treylon Burks          </td></tr>
 <tr><td>WAS</td><td>Brian Robinson         </td></tr>
 <tr><td>BAL</td><td>Isaiah Likely          </td></tr>
 <tr><td>ARI</td><td>Keaontay Ingram        </td></tr>
@@ -220,7 +220,7 @@
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td>MIA</td><td>Jaylen Waddle          </td></tr>
 <tr><td>PIT</td><td>Diontae Johnson        </td></tr>
-<tr><td>NYJ</td><td>Elijah Moore           </td></tr>
+<tr><td>BAL</td><td>Devin Duvernay         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td>DET</td><td>TJ Hockenson           </td></tr>
