--- a/pickups.html
+++ b/pickups.html
@@ -203,8 +203,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Devin Duvernay/Elijah Moore</td>
+<td width=50>10/11</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -330,11 +330,18 @@ Free Pickups:<br>
 States - Younghoe Koo/Rodrigo Blankenship (9/13)<br>
 Sam - Jordan Mason/Jameson Williams (9/13)<br>
 Sam - David Njoku/Trey Lance (9/27)<br>
-Rich - Caleb Huntley/Javonte Williams (10/6)
+Rich - Caleb Huntley/Javonte Williams (10/6)<br>
+Grant - Tyler Lockett/Treylon Burks (10/11)<br>
+States - Geno Smith/Kyren Williams (10/11)
 </td></tr>
 <tr><td width=50>9/30</td>
 <td width=600>
 Sam - Najee Harris, Chris Olave, Cole Kmet<br>
 Steven - David Montgomery, Khalil Herbert, Jahan Dotson
+</td></tr>
+<tr><td width=50>10/11</td>
+<td width=600>
+Mike - David Njoku<br>
+Sam - Jaylen Warren
 </td></tr>
 </table>
