--- a/roster.html
+++ b/roster.html
@@ -56,8 +56,8 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>James Cook             </td></tr>
 <tr><td> LV</td><td>Zamir White            </td></tr>
-<tr><td>TEN</td><td>Hassan Haskins         </td></tr>
 <tr><td>WAS</td><td>Sam Howell             </td></tr>
+<tr><td>MIA</td><td>Skylar Thompson        </td></tr>
 </table>
 </td>
 <td valign=top>
