--- a/week6.html
+++ b/week6.html
@@ -50,9 +50,9 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>Carr</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Dillon</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Doubs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
