--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 <a href="week3.html"><b>3</b></a>
 <a href="week4.html"><b>4</b></a>
 <a href="week5.html"><b>5</b></a>
-<a href="week6.html"><b>6P</b></a><br>
+<a href="week6.html"><b>6</b></a>
+<a href="week7.html"><b>7P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -63,43 +64,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>Mike(3)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>4065</font></td>
-    <td><font size=2>2430</font></td>
-    <td><font size=2>1450</font></td>
-    <td><font size=2>485</font></td>
-    <td><font size=2>1</font></td>
 <tr><td><font size=2>Steven(9)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3165</font></td>
-    <td><font size=2>2440</font></td>
+    <td><font size=2>3805</font></td>
+    <td><font size=2>2950</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>405</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Mike(3)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>4595</font></td>
+    <td><font size=2>3070</font></td>
+    <td><font size=2>1450</font></td>
+    <td><font size=2>485</font></td>
+    <td><font size=2>1</font></td>
+<tr><td><font size=2>Matthew(7)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3205</font></td>
+    <td><font size=2>2850</font></td>
+    <td><font size=2>775</font></td>
+    <td><font size=2>380</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2585</font></td>
-    <td><font size=2>2970</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3095</font></td>
+    <td><font size=2>3610</font></td>
     <td><font size=2>595</font></td>
     <td><font size=2>435</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Matthew(7)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2430</font></td>
-    <td><font size=2>2545</font></td>
-    <td><font size=2>560</font></td>
-    <td><font size=2>380</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>2180</font></td>
-    <td><font size=2>3125</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>2485</font></td>
+    <td><font size=2>3900</font></td>
     <td><font size=2>545</font></td>
     <td><font size=2>260</font></td>
     <td><font size=2>0</font></td>
@@ -113,44 +114,44 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Sam(4)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>3575</font></td>
-    <td><font size=2>2910</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>3995</font></td>
+    <td><font size=2>3520</font></td>
     <td><font size=2>1005</font></td>
     <td><font size=2>345</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>States(2)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2830</font></td>
-    <td><font size=2>3070</font></td>
-    <td><font size=2>795</font></td>
-    <td><font size=2>345</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3500</font></td>
-    <td><font size=2>2945</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4110</font></td>
+    <td><font size=2>3365</font></td>
     <td><font size=2>1175</font></td>
     <td><font size=2>370</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3205</font></td>
-    <td><font size=2>3475</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3845</font></td>
+    <td><font size=2>4005</font></td>
     <td><font size=2>825</font></td>
     <td><font size=2>455</font></td>
     <td><font size=2>1</font></td>
+<tr><td><font size=2>States(2)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3350</font></td>
+    <td><font size=2>3930</font></td>
+    <td><font size=2>795</font></td>
+    <td><font size=2>345</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>2875</font></td>
-    <td><font size=2>4500</font></td>
+    <td><font size=2>3735</font></td>
+    <td><font size=2>5020</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>400</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
 </table>
 </table>
 </body>
