--- a/pickups.html
+++ b/pickups.html
@@ -6,8 +6,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Eno Benjamin/Nick Sciba</td>
+<td width=50>10/16</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -75,8 +75,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jakobi Meyers/Jordan Mason</td>
+<td width=50>10/16</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -262,8 +262,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Hayden Hurst/Christian Watson</td>
+<td width=50>10/16</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -332,7 +332,8 @@ Sam - Jordan Mason/Jameson Williams (9/13)<br>
 Sam - David Njoku/Trey Lance (9/27)<br>
 Rich - Caleb Huntley/Javonte Williams (10/6)<br>
 Grant - Tyler Lockett/Treylon Burks (10/11)<br>
-States - Geno Smith/Kyren Williams (10/11)
+States - Geno Smith/Kyren Williams (10/11)<br>
+Mike - Brett Maher/Rashaad Penny (10/16)
 </td></tr>
 <tr><td width=50>9/30</td>
 <td width=600>
