--- a/roster.html
+++ b/roster.html
@@ -14,6 +14,7 @@
 <tr><td> SF</td><td>Elijah Mitchell        </td></tr>
 <tr><td>BAL</td><td>JK Dobbins             </td></tr>
 <tr><td>MIA</td><td>Raheem Mostert         </td></tr>
+<tr><td>ARI</td><td>Eno Benjamin           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
 <tr><td>MIA</td><td>Tyreek Hill            </td></tr>
@@ -29,7 +30,6 @@
 <tr><td>PIT</td><td>George Pickens         </td></tr>
 <tr><td> KC</td><td>Isiah Pacheco          </td></tr>
 <tr><td>BUF</td><td>Khalil Shakir          </td></tr>
-<tr><td>PIT</td><td>Nick Sciba             </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -67,7 +67,6 @@
 <tr><td> NO</td><td>Jameis Winston         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
-<tr><td>SEA</td><td>Rashaad Penny          </td></tr>
 <tr><td> NE</td><td>Damien Harris          </td></tr>
 <tr><td>JAX</td><td>James Robinson         </td></tr>
 <tr><td> NO</td><td>Mark Ingram            </td></tr>
@@ -83,6 +82,7 @@
 <tr><td>CLE</td><td>David Njoku            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Matt Gay               </td></tr>
+<tr><td>DAL</td><td>Brett Maher            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Dameon Pierce          </td></tr>
 <tr><td>ATL</td><td>Tyler Allgeier         </td></tr>
@@ -105,6 +105,7 @@
 <tr><td>BAL</td><td>Rashod Bateman         </td></tr>
 <tr><td>DET</td><td>Amon-Ra St Brown       </td></tr>
 <tr><td>NYG</td><td>Kadarius Toney         </td></tr>
+<tr><td> NE</td><td>Jakobi Meyers          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td> NE</td><td>Hunter Henry           </td></tr>
@@ -113,7 +114,6 @@
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Kenny Pickett          </td></tr>
-<tr><td> SF</td><td>Jordan Mason           </td></tr>
 <tr><td> NO</td><td>Chris Olave            </td></tr>
 <tr><td>PIT</td><td>Jaylen Warren          </td></tr>
 </table>
@@ -250,13 +250,13 @@
 <tr><td>PHI</td><td>DeVonta Smith          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Darren Waller          </td></tr>
+<tr><td>CIN</td><td>Hayden Hurst           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
 <tr><td>LAC</td><td>Dustin Hopkins         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Breece Hall            </td></tr>
 <tr><td>NYJ</td><td>Garrett Wilson         </td></tr>
-<tr><td> GB</td><td>Christian Watson       </td></tr>
 <tr><td>WAS</td><td>Jahan Dotson           </td></tr>
 </table>
 </td>
