--- a/week6.html
+++ b/week6.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Burrow</td>        <td></td><td align=right>350</td></tr>
 <tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Benjamin</td>      <td></td><td align=right>0</td></tr>
+<tr><td>MBrown</td>        <td></td><td align=right>30</td></tr>
+<tr><td>THill</td>         <td></td><td align=right>85</td></tr>
 <tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>45</td></tr>
+<tr><td>Shakir</td>        <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>510</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (9)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>KHerbert</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Cooks</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>100</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>30</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>25</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>105</td></tr>
+<tr><td>DSmith</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Hurst</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>100</td></tr>
+<tr><td>Hall</td>          <td></td><td align=right>205</td></tr>
+<tr><td></td>              <td></td><td align=right>640</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (2)</b></font></td></tr>
-<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
-<tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Freiermuth</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>GSmith</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>90</td></tr>
+<tr><td>MSanders</td>      <td></td><td align=right>85</td></tr>
+<tr><td>JJefferson</td>    <td></td><td align=right>50</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>145</td></tr>
+<tr><td>Gesicki</td>       <td></td><td align=right>130</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>20</td></tr>
+<tr><td>Thompson</td>      <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>520</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>85</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>45</td></tr>
+<tr><td>Stevenson</td>     <td></td><td align=right>285</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>265</td></tr>
 <tr><td>Doubs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gano</td>          <td></td><td align=right>0</td></tr>
-<tr><td>York</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Gano</td>          <td></td><td align=right>45</td></tr>
+<tr><td>York</td>          <td></td><td align=right>135</td></tr>
+<tr><td></td>              <td></td><td align=right>860</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>180</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>100</td></tr>
+<tr><td>JRobinson</td>     <td></td><td align=right>25</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>GDavis</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td>DPierce</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>GDavis</td>        <td></td><td align=right>135</td></tr>
+<tr><td>Njoku</td>         <td></td><td align=right>25</td></tr>
+<tr><td>Maher</td>         <td></td><td align=right>40</td></tr>
+<tr><td>Allgeier</td>      <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>530</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (6)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>230</td></tr>
+<tr><td>Etienne</td>       <td></td><td align=right>40</td></tr>
+<tr><td>Huntley</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>40</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Prater</td>        <td></td><td align=right>0</td></tr>
-<tr><td>APierce</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Knox</td>          <td></td><td align=right>75</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>130</td></tr>
+<tr><td>APierce</td>       <td></td><td align=right>100</td></tr>
+<tr><td></td>              <td></td><td align=right>640</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>80</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>70</td></tr>
 <tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Pickett</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Pittman</td>       <td></td><td align=right>65</td></tr>
+<tr><td>Meyers</td>        <td></td><td align=right>30</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>50</td></tr>
+<tr><td>McPherson</td>     <td></td><td align=right>75</td></tr>
+<tr><td>Pickett</td>       <td></td><td align=right>50</td></tr>
+<tr><td></td>              <td></td><td align=right>420</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>110</td></tr>
+<tr><td>DCook</td>         <td></td><td align=right>235</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>35</td></tr>
+<tr><td>Waddle</td>        <td></td><td align=right>60</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>40</td></tr>
+<tr><td>Succop</td>        <td></td><td align=right>130</td></tr>
 <tr><td>London</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>610</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Stafford</td>      <td></td><td align=right>60</td></tr>
+<tr><td>Henderson</td>     <td></td><td align=right>50</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>40</td></tr>
+<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>MWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Likely</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Pitts</td>         <td></td><td align=right>75</td></tr>
+<tr><td>-</td>             <td></td><td align=right>0</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>80</td></tr>
+<tr><td></td>              <td></td><td align=right>305</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (7)</b></font></td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gordon</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>30</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>75</td></tr>
+<tr><td>Walker</td>        <td></td><td align=right>145</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Zappe</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Aiyuk</td>         <td></td><td align=right>190</td></tr>
+<tr><td>Andrews</td>       <td></td><td align=right>125</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>60</td></tr>
+<tr><td>Zappe</td>         <td></td><td align=right>150</td></tr>
+<tr><td></td>              <td></td><td align=right>775</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -166,43 +166,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>Mike(3)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>4065</font></td>
-    <td><font size=2>2430</font></td>
-    <td><font size=2>1450</font></td>
-    <td><font size=2>485</font></td>
-    <td><font size=2>1</font></td>
 <tr><td><font size=2>Steven(9)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3165</font></td>
-    <td><font size=2>2440</font></td>
+    <td><font size=2>3805</font></td>
+    <td><font size=2>2950</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>405</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Mike(3)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>4595</font></td>
+    <td><font size=2>3070</font></td>
+    <td><font size=2>1450</font></td>
+    <td><font size=2>485</font></td>
+    <td><font size=2>1</font></td>
+<tr><td><font size=2>Matthew(7)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3205</font></td>
+    <td><font size=2>2850</font></td>
+    <td><font size=2>775</font></td>
+    <td><font size=2>380</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2585</font></td>
-    <td><font size=2>2970</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3095</font></td>
+    <td><font size=2>3610</font></td>
     <td><font size=2>595</font></td>
     <td><font size=2>435</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Matthew(7)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2430</font></td>
-    <td><font size=2>2545</font></td>
-    <td><font size=2>560</font></td>
-    <td><font size=2>380</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>2180</font></td>
-    <td><font size=2>3125</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>2485</font></td>
+    <td><font size=2>3900</font></td>
     <td><font size=2>545</font></td>
     <td><font size=2>260</font></td>
     <td><font size=2>0</font></td>
@@ -216,42 +216,42 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Sam(4)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>3575</font></td>
-    <td><font size=2>2910</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>3995</font></td>
+    <td><font size=2>3520</font></td>
     <td><font size=2>1005</font></td>
     <td><font size=2>345</font></td>
     <td><font size=2>2</font></td>
-<tr><td><font size=2>States(2)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2830</font></td>
-    <td><font size=2>3070</font></td>
-    <td><font size=2>795</font></td>
-    <td><font size=2>345</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3500</font></td>
-    <td><font size=2>2945</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4110</font></td>
+    <td><font size=2>3365</font></td>
     <td><font size=2>1175</font></td>
     <td><font size=2>370</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Rich(6)</font></td>
-    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3205</font></td>
-    <td><font size=2>3475</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3845</font></td>
+    <td><font size=2>4005</font></td>
     <td><font size=2>825</font></td>
     <td><font size=2>455</font></td>
     <td><font size=2>1</font></td>
+<tr><td><font size=2>States(2)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3350</font></td>
+    <td><font size=2>3930</font></td>
+    <td><font size=2>795</font></td>
+    <td><font size=2>345</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>2875</font></td>
-    <td><font size=2>4500</font></td>
+    <td><font size=2>3735</font></td>
+    <td><font size=2>5020</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>400</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
 </table>
