--- a/roster.html
+++ b/roster.html
@@ -70,6 +70,7 @@
 <tr><td> NE</td><td>Damien Harris          </td></tr>
 <tr><td>JAX</td><td>James Robinson         </td></tr>
 <tr><td> NO</td><td>Mark Ingram            </td></tr>
+<tr><td>DEN</td><td>Latavius Murray        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
 <tr><td> GB</td><td>Allen Lazard           </td></tr>
@@ -77,7 +78,6 @@
 <tr><td> NO</td><td>Michael Thomas         </td></tr>
 <tr><td>JAX</td><td>Christian Kirk         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>DAL</td><td>Dalton Schultz         </td></tr>
 <tr><td>LAC</td><td>Gerald Everett         </td></tr>
 <tr><td>CLE</td><td>David Njoku            </td></tr>
 <tr><td height=9></td><td></td></tr>
