--- a/roster.html
+++ b/roster.html
@@ -95,10 +95,11 @@
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Sam (4)</b></font></td></tr>
 <tr><td>ARI</td><td>Kyler Murray           </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>CAR</td><td>Christian McCaffrey    </td></tr>
+<tr><td> SF</td><td>Christian McCaffrey    </td></tr>
 <tr><td> KC</td><td>Clyde Edwards-Helaire  </td></tr>
 <tr><td>MIA</td><td>Chase Edmonds          </td></tr>
 <tr><td>PIT</td><td>Najee Harris           </td></tr>
+<tr><td>CAR</td><td>D'Onta Foreman         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Davante Adams          </td></tr>
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
@@ -109,7 +110,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td> NE</td><td>Hunter Henry           </td></tr>
-<tr><td>CHI</td><td>Cole Kmet              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
 <tr><td height=9></td><td></td></tr>
