--- a/pickups.html
+++ b/pickups.html
@@ -87,8 +87,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>D'Onta Foreman/Cole Kmet</td>
+<td width=50>10/20</td>
 </tr></table></td>
 </tr>
 <tr>
