--- a/roster.html
+++ b/roster.html
@@ -12,7 +12,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Jonathan Taylor        </td></tr>
 <tr><td> SF</td><td>Elijah Mitchell        </td></tr>
-<tr><td>BAL</td><td>JK Dobbins             </td></tr>
 <tr><td>MIA</td><td>Raheem Mostert         </td></tr>
 <tr><td>ARI</td><td>Eno Benjamin           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -23,6 +22,7 @@
 <tr><td> TB</td><td>Chris Godwin           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
+<tr><td> GB</td><td>Robert Tonyan          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Tyler Bass             </td></tr>
 <tr><td>DEN</td><td>Brandon McManus        </td></tr>
