--- a/roster.html
+++ b/roster.html
@@ -48,6 +48,7 @@
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
 <tr><td>BUF</td><td>Stefon Diggs           </td></tr>
 <tr><td>DEN</td><td>Jerry Jeudy            </td></tr>
+<tr><td> NE</td><td>DeVante Parker         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Mike Gesicki           </td></tr>
 <tr><td>PIT</td><td>Pat Freiermuth         </td></tr>
@@ -57,7 +58,6 @@
 <tr><td>BUF</td><td>James Cook             </td></tr>
 <tr><td> LV</td><td>Zamir White            </td></tr>
 <tr><td>WAS</td><td>Sam Howell             </td></tr>
-<tr><td>MIA</td><td>Skylar Thompson        </td></tr>
 </table>
 </td>
 <td valign=top>
